2017-08-04  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/81590
	* gcc.target/i386/avx512-check.h: New file.
	* gcc.target/i386/avx5124fmaps-check.h: Removed.
	* gcc.target/i386/avx5124vnniw-check.h: Likewise.
	* gcc.target/i386/avx512cd-check.h: Likewise.
	* gcc.target/i386/avx512ifma-check.h: Likewise.
	* gcc.target/i386/avx512vbmi-check.h: Likewise.
	* gcc.target/i386/avx512vpopcntdq-check.h: Likewise.
	* gcc.target/i386/avx512bw-check.h: Rewrite.
	* gcc.target/i386/avx512dq-check.h: Likewise.
	* gcc.target/i386/avx512er-check.h: Likewise.
	* gcc.target/i386/avx512f-check.h: Likewise.
	* gcc.target/i386/avx512vl-check.h: Likewise.
	* gcc.target/i386/avx512f-helper.h: Include "avx512-check.h"
	only.
	(test_512): Removed.
	(avx512*_test): Likewise.
	* gcc.target/i386/avx512f-pr71559.c (TEST): Undef.

2017-08-04  Marek Polacek  <polacek@redhat.com>

	PR middle-end/81695
	* gcc.dg/pr81695.c: New test.

2017-08-04  Richard Sandiford  <richard.sandiford@linaro.org>

	PR tree-optimization/81136
	* gcc.dg/vect/pr81136.c: Add scan test.

2017-08-04  Richard Sandiford  <richard.sandiford@linaro.org>

	* gcc.dg/vect/vect-alias-check-3.c: New test.
	* gcc.dg/vect/vect-alias-check-4.c: Likewise.
	* gcc.dg/vect/vect-alias-check-5.c: Likewise.

2017-08-04  Richard Biener  <rguenther@suse.de>

	PR middle-end/81705
	* c-c++-common/ubsan/pr81705.c: New testcase.

2017-08-03  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* gcc.target/powerpc/bfp/scalar-cmp-exp-eq-2.c: Adjust for error
	messages that used to start with a capital letter.
	* gcc.target/powerpc/bfp/scalar-cmp-exp-gt-2.c: Likewise.
	* gcc.target/powerpc/bfp/scalar-cmp-exp-lt-2.c: Likewise.
	* gcc.target/powerpc/bfp/scalar-cmp-unordered-2.c: Likewise.
	* gcc.target/powerpc/bfp/scalar-extract-exp-1.c: Likewise.
	* gcc.target/powerpc/bfp/scalar-extract-exp-4.c: Likewise.
	* gcc.target/powerpc/bfp/scalar-extract-sig-1.c: Likewise.
	* gcc.target/powerpc/bfp/scalar-extract-sig-4.c: Likewise.